parser.output
State 9 conflicts: 5 shift/reduce
State 59 conflicts: 10 shift/reduce


Grammar

    0 $accept: program $end

    1 program: stmts
    2        | /* empty */

    3 stmts: stmt
    4      | stmts stmt
    5      | stmts TENDL

    6 stmt: type_decl
    7     | func_bind
    8     | func_case

    9 type_decl: ident TTYPEOF type TENDL

   10 type: TLPAREN type TRPAREN
   11     | type TARROW type
   12     | name_of_type

   13 func_pattern_args: func_pattern_args func_pattern_arg
   14                  | func_pattern_arg
   15                  | /* empty */

   16 func_pattern_arg: TBLANK
   17                 | numeric
   18                 | ident

   19 case: TCASE expr TEQUAL expr TENDL

   20 case_list: case
   21          | case_list TINTEND case

   22 func_pattern: ident func_pattern_args

   23 func_bind: func_pattern TEQUAL expr TENDL

   24 func_case: func_pattern case_list

   25 ident: TIDENTIFIER

   26 name_of_type: TTNAME

   27 numeric: TINTEGER
   28        | TDOUBLE
   29        | TBOOL

   30 expr: ident TLPAREN call_args TRPAREN
   31     | ident
   32     | numeric
   33     | expr bin_operator expr
   34     | TLPAREN expr TRPAREN

   35 call_args: /* empty */
   36          | expr
   37          | call_args TCOMMA expr

   38 bin_operator: TCEQ
   39             | TCNE
   40             | TCLT
   41             | TCLE
   42             | TCGT
   43             | TCGE
   44             | TMINUS
   45             | TPLUS
   46             | TDIV
   47             | TMUL


Terminals, with rules where they appear

$end (0) 0
error (256)
TINTEND (258) 21
TTNAME (259) 26
TIDENTIFIER (260) 25
TINTEGER (261) 27
TDOUBLE (262) 28
TBOOL (263) 29
TCEQ (264) 38
TCNE (265) 39
TCLT (266) 40
TCLE (267) 41
TCGT (268) 42
TCGE (269) 43
TEQUAL (270) 19 23
TLPAREN (271) 10 30 34
TRPAREN (272) 10 30 34
TCOMMA (273) 37
TPLUS (274) 45
TMINUS (275) 44
TMUL (276) 47
TDIV (277) 46
TBLANK (278) 16
TTYPEOF (279) 9
TCASE (280) 19
TARROW (281) 11
TENDL (282) 5 9 19 23


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
program (29)
    on left: 1 2, on right: 0
stmts (30)
    on left: 3 4 5, on right: 1 4 5
stmt (31)
    on left: 6 7 8, on right: 3 4
type_decl (32)
    on left: 9, on right: 6
type (33)
    on left: 10 11 12, on right: 9 10 11
func_pattern_args (34)
    on left: 13 14 15, on right: 13 22
func_pattern_arg (35)
    on left: 16 17 18, on right: 13 14
case (36)
    on left: 19, on right: 20 21
case_list (37)
    on left: 20 21, on right: 21 24
func_pattern (38)
    on left: 22, on right: 23 24
func_bind (39)
    on left: 23, on right: 7
func_case (40)
    on left: 24, on right: 8
ident (41)
    on left: 25, on right: 9 18 22 30 31
name_of_type (42)
    on left: 26, on right: 12
numeric (43)
    on left: 27 28 29, on right: 17 32
expr (44)
    on left: 30 31 32 33 34, on right: 19 23 33 34 36 37
call_args (45)
    on left: 35 36 37, on right: 30 37
bin_operator (46)
    on left: 38 39 40 41 42 43 44 45 46 47, on right: 33


state 0

    0 $accept: . program $end

    TIDENTIFIER  shift, and go to state 1

    $default  reduce using rule 2 (program)

    program       go to state 2
    stmts         go to state 3
    stmt          go to state 4
    type_decl     go to state 5
    func_pattern  go to state 6
    func_bind     go to state 7
    func_case     go to state 8
    ident         go to state 9


state 1

   25 ident: TIDENTIFIER .

    $default  reduce using rule 25 (ident)


state 2

    0 $accept: program . $end

    $end  shift, and go to state 10


state 3

    1 program: stmts .
    4 stmts: stmts . stmt
    5      | stmts . TENDL

    TIDENTIFIER  shift, and go to state 1
    TENDL        shift, and go to state 11

    $default  reduce using rule 1 (program)

    stmt          go to state 12
    type_decl     go to state 5
    func_pattern  go to state 6
    func_bind     go to state 7
    func_case     go to state 8
    ident         go to state 9


state 4

    3 stmts: stmt .

    $default  reduce using rule 3 (stmts)


state 5

    6 stmt: type_decl .

    $default  reduce using rule 6 (stmt)


state 6

   23 func_bind: func_pattern . TEQUAL expr TENDL
   24 func_case: func_pattern . case_list

    TEQUAL  shift, and go to state 13
    TCASE   shift, and go to state 14

    case       go to state 15
    case_list  go to state 16


state 7

    7 stmt: func_bind .

    $default  reduce using rule 7 (stmt)


state 8

    8 stmt: func_case .

    $default  reduce using rule 8 (stmt)


state 9

    9 type_decl: ident . TTYPEOF type TENDL
   22 func_pattern: ident . func_pattern_args

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 17
    TDOUBLE      shift, and go to state 18
    TBOOL        shift, and go to state 19
    TBLANK       shift, and go to state 20
    TTYPEOF      shift, and go to state 21

    TIDENTIFIER  [reduce using rule 15 (func_pattern_args)]
    TINTEGER     [reduce using rule 15 (func_pattern_args)]
    TDOUBLE      [reduce using rule 15 (func_pattern_args)]
    TBOOL        [reduce using rule 15 (func_pattern_args)]
    TBLANK       [reduce using rule 15 (func_pattern_args)]
    $default     reduce using rule 15 (func_pattern_args)

    func_pattern_args  go to state 22
    func_pattern_arg   go to state 23
    ident              go to state 24
    numeric            go to state 25


state 10

    0 $accept: program $end .

    $default  accept


state 11

    5 stmts: stmts TENDL .

    $default  reduce using rule 5 (stmts)


state 12

    4 stmts: stmts stmt .

    $default  reduce using rule 4 (stmts)


state 13

   23 func_bind: func_pattern TEQUAL . expr TENDL

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 17
    TDOUBLE      shift, and go to state 18
    TBOOL        shift, and go to state 19
    TLPAREN      shift, and go to state 26

    ident    go to state 27
    numeric  go to state 28
    expr     go to state 29


state 14

   19 case: TCASE . expr TEQUAL expr TENDL

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 17
    TDOUBLE      shift, and go to state 18
    TBOOL        shift, and go to state 19
    TLPAREN      shift, and go to state 26

    ident    go to state 27
    numeric  go to state 28
    expr     go to state 30


state 15

   20 case_list: case .

    $default  reduce using rule 20 (case_list)


state 16

   21 case_list: case_list . TINTEND case
   24 func_case: func_pattern case_list .

    TINTEND  shift, and go to state 31

    $default  reduce using rule 24 (func_case)


state 17

   27 numeric: TINTEGER .

    $default  reduce using rule 27 (numeric)


state 18

   28 numeric: TDOUBLE .

    $default  reduce using rule 28 (numeric)


state 19

   29 numeric: TBOOL .

    $default  reduce using rule 29 (numeric)


state 20

   16 func_pattern_arg: TBLANK .

    $default  reduce using rule 16 (func_pattern_arg)


state 21

    9 type_decl: ident TTYPEOF . type TENDL

    TTNAME   shift, and go to state 32
    TLPAREN  shift, and go to state 33

    type          go to state 34
    name_of_type  go to state 35


state 22

   13 func_pattern_args: func_pattern_args . func_pattern_arg
   22 func_pattern: ident func_pattern_args .

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 17
    TDOUBLE      shift, and go to state 18
    TBOOL        shift, and go to state 19
    TBLANK       shift, and go to state 20

    $default  reduce using rule 22 (func_pattern)

    func_pattern_arg  go to state 36
    ident             go to state 24
    numeric           go to state 25


state 23

   14 func_pattern_args: func_pattern_arg .

    $default  reduce using rule 14 (func_pattern_args)


state 24

   18 func_pattern_arg: ident .

    $default  reduce using rule 18 (func_pattern_arg)


state 25

   17 func_pattern_arg: numeric .

    $default  reduce using rule 17 (func_pattern_arg)


state 26

   34 expr: TLPAREN . expr TRPAREN

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 17
    TDOUBLE      shift, and go to state 18
    TBOOL        shift, and go to state 19
    TLPAREN      shift, and go to state 26

    ident    go to state 27
    numeric  go to state 28
    expr     go to state 37


state 27

   30 expr: ident . TLPAREN call_args TRPAREN
   31     | ident .

    TLPAREN  shift, and go to state 38

    $default  reduce using rule 31 (expr)


state 28

   32 expr: numeric .

    $default  reduce using rule 32 (expr)


state 29

   23 func_bind: func_pattern TEQUAL expr . TENDL
   33 expr: expr . bin_operator expr

    TCEQ    shift, and go to state 39
    TCNE    shift, and go to state 40
    TCLT    shift, and go to state 41
    TCLE    shift, and go to state 42
    TCGT    shift, and go to state 43
    TCGE    shift, and go to state 44
    TPLUS   shift, and go to state 45
    TMINUS  shift, and go to state 46
    TMUL    shift, and go to state 47
    TDIV    shift, and go to state 48
    TENDL   shift, and go to state 49

    bin_operator  go to state 50


state 30

   19 case: TCASE expr . TEQUAL expr TENDL
   33 expr: expr . bin_operator expr

    TCEQ    shift, and go to state 39
    TCNE    shift, and go to state 40
    TCLT    shift, and go to state 41
    TCLE    shift, and go to state 42
    TCGT    shift, and go to state 43
    TCGE    shift, and go to state 44
    TEQUAL  shift, and go to state 51
    TPLUS   shift, and go to state 45
    TMINUS  shift, and go to state 46
    TMUL    shift, and go to state 47
    TDIV    shift, and go to state 48

    bin_operator  go to state 50


state 31

   21 case_list: case_list TINTEND . case

    TCASE  shift, and go to state 14

    case  go to state 52


state 32

   26 name_of_type: TTNAME .

    $default  reduce using rule 26 (name_of_type)


state 33

   10 type: TLPAREN . type TRPAREN

    TTNAME   shift, and go to state 32
    TLPAREN  shift, and go to state 33

    type          go to state 53
    name_of_type  go to state 35


state 34

    9 type_decl: ident TTYPEOF type . TENDL
   11 type: type . TARROW type

    TARROW  shift, and go to state 54
    TENDL   shift, and go to state 55


state 35

   12 type: name_of_type .

    $default  reduce using rule 12 (type)


state 36

   13 func_pattern_args: func_pattern_args func_pattern_arg .

    $default  reduce using rule 13 (func_pattern_args)


state 37

   33 expr: expr . bin_operator expr
   34     | TLPAREN expr . TRPAREN

    TCEQ     shift, and go to state 39
    TCNE     shift, and go to state 40
    TCLT     shift, and go to state 41
    TCLE     shift, and go to state 42
    TCGT     shift, and go to state 43
    TCGE     shift, and go to state 44
    TRPAREN  shift, and go to state 56
    TPLUS    shift, and go to state 45
    TMINUS   shift, and go to state 46
    TMUL     shift, and go to state 47
    TDIV     shift, and go to state 48

    bin_operator  go to state 50


state 38

   30 expr: ident TLPAREN . call_args TRPAREN

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 17
    TDOUBLE      shift, and go to state 18
    TBOOL        shift, and go to state 19
    TLPAREN      shift, and go to state 26

    $default  reduce using rule 35 (call_args)

    ident      go to state 27
    numeric    go to state 28
    expr       go to state 57
    call_args  go to state 58


state 39

   38 bin_operator: TCEQ .

    $default  reduce using rule 38 (bin_operator)


state 40

   39 bin_operator: TCNE .

    $default  reduce using rule 39 (bin_operator)


state 41

   40 bin_operator: TCLT .

    $default  reduce using rule 40 (bin_operator)


state 42

   41 bin_operator: TCLE .

    $default  reduce using rule 41 (bin_operator)


state 43

   42 bin_operator: TCGT .

    $default  reduce using rule 42 (bin_operator)


state 44

   43 bin_operator: TCGE .

    $default  reduce using rule 43 (bin_operator)


state 45

   45 bin_operator: TPLUS .

    $default  reduce using rule 45 (bin_operator)


state 46

   44 bin_operator: TMINUS .

    $default  reduce using rule 44 (bin_operator)


state 47

   47 bin_operator: TMUL .

    $default  reduce using rule 47 (bin_operator)


state 48

   46 bin_operator: TDIV .

    $default  reduce using rule 46 (bin_operator)


state 49

   23 func_bind: func_pattern TEQUAL expr TENDL .

    $default  reduce using rule 23 (func_bind)


state 50

   33 expr: expr bin_operator . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 17
    TDOUBLE      shift, and go to state 18
    TBOOL        shift, and go to state 19
    TLPAREN      shift, and go to state 26

    ident    go to state 27
    numeric  go to state 28
    expr     go to state 59


state 51

   19 case: TCASE expr TEQUAL . expr TENDL

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 17
    TDOUBLE      shift, and go to state 18
    TBOOL        shift, and go to state 19
    TLPAREN      shift, and go to state 26

    ident    go to state 27
    numeric  go to state 28
    expr     go to state 60


state 52

   21 case_list: case_list TINTEND case .

    $default  reduce using rule 21 (case_list)


state 53

   10 type: TLPAREN type . TRPAREN
   11     | type . TARROW type

    TRPAREN  shift, and go to state 61
    TARROW   shift, and go to state 54


state 54

   11 type: type TARROW . type

    TTNAME   shift, and go to state 32
    TLPAREN  shift, and go to state 33

    type          go to state 62
    name_of_type  go to state 35


state 55

    9 type_decl: ident TTYPEOF type TENDL .

    $default  reduce using rule 9 (type_decl)


state 56

   34 expr: TLPAREN expr TRPAREN .

    $default  reduce using rule 34 (expr)


state 57

   33 expr: expr . bin_operator expr
   36 call_args: expr .

    TCEQ    shift, and go to state 39
    TCNE    shift, and go to state 40
    TCLT    shift, and go to state 41
    TCLE    shift, and go to state 42
    TCGT    shift, and go to state 43
    TCGE    shift, and go to state 44
    TPLUS   shift, and go to state 45
    TMINUS  shift, and go to state 46
    TMUL    shift, and go to state 47
    TDIV    shift, and go to state 48

    $default  reduce using rule 36 (call_args)

    bin_operator  go to state 50


state 58

   30 expr: ident TLPAREN call_args . TRPAREN
   37 call_args: call_args . TCOMMA expr

    TRPAREN  shift, and go to state 63
    TCOMMA   shift, and go to state 64


state 59

   33 expr: expr . bin_operator expr
   33     | expr bin_operator expr .

    TCEQ    shift, and go to state 39
    TCNE    shift, and go to state 40
    TCLT    shift, and go to state 41
    TCLE    shift, and go to state 42
    TCGT    shift, and go to state 43
    TCGE    shift, and go to state 44
    TPLUS   shift, and go to state 45
    TMINUS  shift, and go to state 46
    TMUL    shift, and go to state 47
    TDIV    shift, and go to state 48

    TCEQ      [reduce using rule 33 (expr)]
    TCNE      [reduce using rule 33 (expr)]
    TCLT      [reduce using rule 33 (expr)]
    TCLE      [reduce using rule 33 (expr)]
    TCGT      [reduce using rule 33 (expr)]
    TCGE      [reduce using rule 33 (expr)]
    TPLUS     [reduce using rule 33 (expr)]
    TMINUS    [reduce using rule 33 (expr)]
    TMUL      [reduce using rule 33 (expr)]
    TDIV      [reduce using rule 33 (expr)]
    $default  reduce using rule 33 (expr)

    bin_operator  go to state 50


state 60

   19 case: TCASE expr TEQUAL expr . TENDL
   33 expr: expr . bin_operator expr

    TCEQ    shift, and go to state 39
    TCNE    shift, and go to state 40
    TCLT    shift, and go to state 41
    TCLE    shift, and go to state 42
    TCGT    shift, and go to state 43
    TCGE    shift, and go to state 44
    TPLUS   shift, and go to state 45
    TMINUS  shift, and go to state 46
    TMUL    shift, and go to state 47
    TDIV    shift, and go to state 48
    TENDL   shift, and go to state 65

    bin_operator  go to state 50


state 61

   10 type: TLPAREN type TRPAREN .

    $default  reduce using rule 10 (type)


state 62

   11 type: type . TARROW type
   11     | type TARROW type .

    TARROW  shift, and go to state 54

    $default  reduce using rule 11 (type)


state 63

   30 expr: ident TLPAREN call_args TRPAREN .

    $default  reduce using rule 30 (expr)


state 64

   37 call_args: call_args TCOMMA . expr

    TIDENTIFIER  shift, and go to state 1
    TINTEGER     shift, and go to state 17
    TDOUBLE      shift, and go to state 18
    TBOOL        shift, and go to state 19
    TLPAREN      shift, and go to state 26

    ident    go to state 27
    numeric  go to state 28
    expr     go to state 66


state 65

   19 case: TCASE expr TEQUAL expr TENDL .

    $default  reduce using rule 19 (case)


state 66

   33 expr: expr . bin_operator expr
   37 call_args: call_args TCOMMA expr .

    TCEQ    shift, and go to state 39
    TCNE    shift, and go to state 40
    TCLT    shift, and go to state 41
    TCLE    shift, and go to state 42
    TCGT    shift, and go to state 43
    TCGE    shift, and go to state 44
    TPLUS   shift, and go to state 45
    TMINUS  shift, and go to state 46
    TMUL    shift, and go to state 47
    TDIV    shift, and go to state 48

    $default  reduce using rule 37 (call_args)

    bin_operator  go to state 50
